--- a/templates/base.html
+++ b/templates/base.html
@@ -11,31 +11,11 @@
             t.value=t.value.replace(/\s/g,'');
         }}
 
-        <!--https://stackoverflow.com/questions/6835835/jquery-simple-polling-example-->
-        function getCookie(c_name) {
-            if (document.cookie.length > 0) {
-                c_start = document.cookie.indexOf(c_name + "=");
-                if (c_start != -1) {
-                    c_start = c_start + c_name.length + 1;
-                    c_end = document.cookie.indexOf(";", c_start);
-                    if (c_end == -1) c_end = document.cookie.length;
-                    return unescape(document.cookie.substring(c_start,c_end));
-                }
-            } return "";}
-
         $.ajaxSetup({
-            headers: { "X-CSRFToken": getCookie("csrftoken") }
+            headers: { "X-CSRFToken": '{{csrf_token}}' }
         });
 
-        $(document).ready(function() {
-            $('.collapsible').collapsible();
-        });
 </script>
-
-
-{% include 'material/includes/material_css.html' %}
-{% include 'material/includes/material_js.html' %}
-
 
 <style>
     html, body {
@@ -56,13 +36,6 @@
         width:100%;
         height:60px;
         background: #c21807;
-    }
-
-    header nav a {
-        font-size:20px;
-        font-weight: bold;
-        padding: 14px 20px;
-        color: black;
     }
 
     #content {
@@ -92,7 +65,7 @@
     }
     .divider {
         color: black;
-        background-color: white;
+        padding-right: .2em;
     }
 </style>
 
@@ -105,7 +78,7 @@
 </div>
 
 <footer style="float: right; text-align: right; position: absolute; bottom: 0px; right: 10px;">
-    &copy; 2021 Matthias Gorzellik | v0.4 | <a href="https://github.com/gotzl/accservermanager">GitHub</a>
+    &copy; 2023 Matthias Gorzellik | v0.4 | <a href="https://github.com/gotzl/accservermanager">GitHub</a>
 </footer>
 </body>
 <html>
