--- a/results/templates/results/table/results_simresults_column.html
+++ b/results/templates/results/table/results_simresults_column.html
@@ -1,1 +1,1 @@
-<a class="btn black" target="_blank" href="https://simresults.net/remote?result={{ request.build_absolute_uri }}{{record.name}}.json">Simresults</a>
+<a class="btn btn-dark" target="_blank" href="https://simresults.net/remote?result={{ request.build_absolute_uri }}{{record.name}}.json">Simresults</a>
